# vecbox

./: .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmignore  API.md  API_NATIVE.md  CHANGELOG.md  CMD.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  TODO.md  TROUBLESHOOTING.md  demo_embedding.ts  eslint.config.cjs  index.ts  main.ts  modules.d.ts  package-lock.json  package-optimization.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.spec.ts  test_input.txt  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: build-native.yml
core/: CMakeLists.txt  README.md
docs/: ANALISE-CRITICA-CODIGO.md  ARQUITETURA-IMPLEMENTACAO.md  GUIA-DIDATICO-IMPLEMENTACAO.md  GUIA-VITEST-COMPLETO.md  PONTOS-ILÓGICOS-ANÁLISE.md  README.md  providers.md
examples/: basic-usage.ts  native-usage.cjs  native-usage.js
native/: .gitignore  README.md  binding.gyp  index.js  llama_embedding.cpp  llama_embedding_simple.cpp  package-lock.json  package.json
scripts/: build-native.cjs  test-all-providers.cjs
src/: index.ts  native-loader.mjs  native-wrapper.cjs  native-wrapper.mjs
src/factory/: EmbeddingFactory.ts
src/providers/: claude.ts  deepseek.ts  gemini.ts  llamacpp.ts  mistral.ts  openai.ts  paths.ts  transformers.ts
src/providers/base/: EmbeddingProvider.ts
src/types/: deepseek.d.ts  index.d.ts  index.ts  package.json  transformers.d.ts
src/util/: http-client.ts  logger.ts
test/: integration.test.js  native.test.js
test/fixtures/: test.txt
